<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:icon="@drawable/homeimg"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/orderFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:icon="@drawable/notifimg"
        android:title="@string/orders" />

    <item
        android:id="@+id/storeFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:icon="@drawable/accountimg"
        android:title="@string/store" />

</menu>