<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProductDialogFragment">

    <EditText
        android:id="@+id/editTextProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

    <EditText
        android:id="@+id/editTextProductPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/product_price"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

    <EditText
        android:id="@+id/editTextProductDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/product_description"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
